[KAIZEN-0] bruker `java.nio.file.Files` for skriving og lesing av snapshotfiler